Added child abuse protection pages

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
         </section>
 
         <section class="nav-links">
+            <a href="safety-standards.html">→ Go to Safety Standards</a>
             <a href="delete-account.html">→ Go to Account Deletion Page</a>
         </section>
 
